--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "create-react-app-template",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://created-with-love.github.io/react-modal",
+  "homepage": "https://created-with-love.github.io/react-modal-clock-tabs",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
